# just-kit

./: .pre-commit-config.yaml  README.md  core.just  just-bash  justfile  link  lock  pick.just  pyproject.toml  settings.just  setup
amb/: docker.just  proxy.just
amb/tas/: forti.just  oc.just
bash/: create-symlink.sh  just-bash  setup.sh
core/: config.just  general.just
pick/: get-default-imports.sh  get-git-remote.sh  pick.just  pick.sh  search-just-files.sh  setup.sh  update-justfile.sh  write-default-imports.sh
